[gd_scene load_steps=3 format=3 uid="uid://x2t5j7bc3fbu"]

[ext_resource type="Script" path="res://stationary_camera/stationary_camera.gd" id="1_3dts6"]
[ext_resource type="PackedScene" uid="uid://ck5dl85ds4yc3" path="res://detection_fov/detection_fov.tscn" id="2_o3l5m"]

[node name="StationaryCamera" type="Node3D"]
script = ExtResource("1_3dts6")

[node name="Mesh" type="CSGBox3D" parent="."]
size = Vector3(0.3, 0.3, 0.5)

[node name="DetectionFOV" parent="." instance=ExtResource("2_o3l5m")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.209189)
length = 25.0
radius = 6.0

[node name="ForwardDirection" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 15)
top_level = true

[connection signal="player_detected" from="DetectionFOV" to="." method="_on_detection_fov_player_detected"]
[connection signal="player_undetected" from="DetectionFOV" to="." method="_on_detection_fov_player_undetected"]
